Bug 128867 - Decimal separator on numeric pad not recognized in page or paragraph formatting dialogues
Summary: Decimal separator on numeric pad not recognized in page or paragraph formatti...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha1+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.0.1 target:6.3.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-11-18 07:59 UTC by andis.lazdins
Modified: 2020-02-10 06:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andis.lazdins 2019-11-18 07:59:38 UTC
Description:
While on previous versions of Libreoffice (up to 6.2.8 at least) decimal separator on numeric pad was treated as decimal separator by all dialogues of the program, now it is different - I can use it as decimal separator, for instance, to write numbers in Calc, but to set paragraph margins I have to use comma from main keyboard (in Latvian comma is decimal separator).

I'm sure it is Libreoffice bug, because in parallel installation of 6.2.8 everything works as supposed to work.

Steps to Reproduce:
1. Set operating system keyboard layout to Latvian (apostrophe) or any other layout using comma as decimal separator (in my case keyboard model is set to Generic 105-key PC (intl.).
2. In Libreoffice open Options and in Language section set Locale settings to Latvian. Leave Decimal separator key checked on - Same as locale settings (,).
3. Create new Calc file and enter some decimal numbers using numeric pad to enter decimal separator.
4. Open Format > Page and select Page tab. Try to enter 2,5 cm for Margins using numeric pad as decimal separator.

3.

Actual Results:
On point 3 numbers are entered as predicted and decimal separator on numeric pad is recognized as decimal separator.
On point 4 decimal separator on numeric pad is not recognized and instead of 2,5 cm program enters 25 cm.

Expected Results:
In both cases program should recognize decimal separator in numeric pad as decimal separator and page margins in point for should be set to 2,5 cm.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 6.4.0.0.beta1
Build ID: 4d7e5b0c40ed843384704eca3ce21981d4e98920
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: lv-LV (en_GB.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-12-11 13:10:21 UTC
not happening in gen, seems to be a gtk3 problem

Reproduced in

Version: 6.5.0.0.alpha0+
Build ID: b9d6ea1dd7541c4bd866571f9e3f0aa894687c07
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-12-11 13:21:10 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=cfe41185bc8514949d1938ee1d7cd56968682510

author	Caolán McNamara <caolanm@redhat.com>	2019-02-23 13:42:55 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2019-02-27 22:18:22 +0100
commit cfe41185bc8514949d1938ee1d7cd56968682510 (patch)
tree 8d990aae964cf0ed6ed49c06a86133057481ae7d
parent 3e1306c283c2aca372a8384801a1e206f208e1cb (diff)
weld LicenseDialogImpl

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 3 Commit Notification 2019-12-11 16:09:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dead2a5b0eaae3fb33f9d2b4d249849864014585

Resolves: tdf#128867 support LocalizedDecimalSep for native gtk dialogs

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-12-11 17:02:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/44ef2bc932427e6bd134eb40db307ea41a7bd119

Resolves: tdf#128867 support LocalizedDecimalSep for native gtk dialogs

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2019-12-11 17:02:48 UTC
fixed in master and 6-4, backport to 6-3 in gerrit
Comment 6 Commit Notification 2019-12-12 03:14:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/6f1f1af8b7abb1597c7a83249658fe977729ddcf

Resolves: tdf#128867 support LocalizedDecimalSep for native gtk dialogs

It will be available in 6.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-12-12 08:35:59 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: 775a06361639ffc539fda20d44b9610c98005d9b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 8 andis.lazdins 2020-02-10 06:06:26 UTC
Solved!
Thank you!