Resolves: tdf#128867 support LocalizedDecimalSep for native gtk dialogs

Change-Id: Idb883707fb89d1f76b24ea592c51e28fffd2322f
Reviewed-on: https://gerrit.libreoffice.org/84954
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>